# VSEMUR

./: .~lock.isa_decoding_strategies_and_brainstorm.ods#  Cargo.toml  LICENSE  README.md  isa_decoding_strategies_and_brainstorm.ods
lib/: about.rs  decode.rs  interpreter.rs  jit.rs  lib.rs  logging.rs  memory.rs  types.rs
lib/decode/: common.rs  disassemble.rs  instruction_printing.rs
lib/decode/disassemble/: generalplus.rs  jekel.rs  mame.rs
lib/interpreter/: bios.rs  cartridge.rs  common.rs  cpu.rs  emulator.rs  execute.rs  input.rs  input_sender.rs  io.rs  memory.rs  peripherals.rs  render.rs  render_reciever.rs  sound.rs  sound_reciever.rs  state.rs  unsp.rs
lib/interpreter/TO_REMOVE/: cpu.rs
lib/interpreter/cpu/: decode.rs  execute.rs
lib/interpreter/cpu/decode/: disassemble.rs  instruction_printing.rs
lib/interpreter/cpu/execute/: alu.rs  bitop.rs  control.rs  muldiv.rs  other_upper_nibbles.rs  shift16.rs  stack.rs  upper_nibble_1110.rs  upper_nibble_1111.rs
lib/interpreter/cpu/old_execute/: other_upper_nibbles.rs  upper_nibble_1110.rs
lib/interpreter/execute/: other_upper_nibbles.rs  upper_nibble_1110.rs  upper_nibble_1111.rs
lib/interpreter/io/: adc.rs  gpio.rs  input.rs
lib/interpreter/peripherals/: bios.rs  cartidge.rs  cartridge.rs  io.rs  memory.rs  render.rs  rom_bios.rs  sound.rs
lib/interpreter/peripherals/io/: adc.rs  gpio.rs
lib/interpreter/state/: cpu_regs.rs  interrupts.rs  memory_map.rs
lib/interpreter/unsp/: alu.rs  bitop.rs  control.rs  muldiv.rs  shift16.rs  stack.rs
src/: assemble.rs  cli.rs  disassemble.rs  gui.rs  lib.rs
src/vsemur/: about.rs  logging.rs  mod.rs
tests/: sanity_interpreter.rs
