[package]
name = "VSEMUR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vsemur"
path = "src/lib.rs"

[[bin]]
name = "vsemur-cli"
path = "src/cli.rs"

[[bin]]
name = "vsemur-gui"
path = "src/gui.rs"

[dependencies]
