[package]
name = "VSEMUR"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vsemur"
path = "lib/lib.rs"

[[bin]]
name = "vsemur-cli"
path = "src/cli.rs"

[[bin]]
name = "vsemur-gui"
path = "src/gui.rs"

[dependencies]

[profile.release]
strip = true
overflow-checks = false
panic = "abort"
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false
overflow-checks = false
panic = "abort"
lto = false
debug = true
