[package]
name = "VSEMUR"
version = "0.1.0"
edition = "2021"
#rustflag = ["link-dead-code=n"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vsemur"
path = "lib/lib.rs"

[[bin]]
name = "vsemur-cli"
path = "src/cli.rs"

[[bin]]
name = "vsemur-gui"
path = "src/gui.rs"

[[bin]]
name = "vsemur-disassemble"
path = "src/disassemble.rs"

[dependencies]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false
overflow-checks = false
panic = "abort"
lto = false
debug = true
